# labeling-agent

./: .env.example  .gitignore  MASK_COORDINATE_ISSUE.md  README.md  download_weights.sh  feedback.db  pyproject.toml  requirements.txt  temp.py  test_mask_fix.py  test_transforms.py
agent/: __init__.py  app.py  config.py  feedback.py  ls_client.py  pipeline.py  run.py
agent/converters/: __init__.py  coco_format.py  ls_format.py  yolo_format.py
agent/models/: __init__.py  dino.py  sam.py
agent/static/: app.js  index.html  style.css
agent/training/: __init__.py  data_collector.py  trainer.py
agent/utils/: __init__.py  box_transforms.py  colors.py  image_loader.py  logging_config.py  util.py  visualize.py  web_display_converter.py
debug/: debug_visualize_export.py  debug_visualize_yolo.py
docs/: AGENT_BASED_LABELING_FACTORY.md  IMPLEMENTATION_SUMMARY.md  ISSUES_TODO.md  MODIFICATIONS_SUMMARY.md  PIPELINE_FLOW_COMPARISON.md  REFACTORING_SUMMARY.md
